Add sound button to Pokémon modal for playing Pokémon cries

--- a/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list.component.html
@@ -29,6 +29,9 @@
         <div class="modal-header">
           <h2>#{{ selectedPokemon.id }} {{ selectedPokemon.name | titlecase }}</h2>
           <img [src]="selectedPokemon.sprites.front_default" [alt]="selectedPokemon.name" />
+          <button class="sound-button" (click)="playSoundCry(selectedPokemon.id)">
+            🔊 Hear Pokémon Cry
+          </button>
         </div>
         
         <div class="modal-body">
