--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body
+  margin: 0
+  padding: 0
+  box-sizing: border-box
+  background-image: url('./assets/images/background.png')
+  background-size: cover
+  background-repeat: no-repeat
+  background-attachment: fixed
+  font-family: 'Arial', sans-serif
