Refactor Pokémon detail component to use external template and update styles for navigation buttons

--- a/src/app/components/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/components/pokemon-detail/pokemon-detail.component.html
@@ -1,1 +1,10 @@
-<p>pokemon-detail works!</p>
+<div *ngIf="pokemon">
+    <h2>{{ pokemon.name | titlecase }}</h2>
+    <img [src]="pokemon.sprites.front_default" alt="{{ pokemon.name }}">
+    <ul>
+      <li *ngFor="let type of pokemon.types">
+        {{ type.type.name }}
+      </li>
+    </ul>
+    <h3>Abilities</h3>
+  </div>
