--- a/documentation/components/AppComponent.html
+++ b/documentation/components/AppComponent.html
@@ -120,6 +120,16 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>Root component of the Pokedex application.</p>
+<p>This component serves as the entry point for the application and
+manages the top-level layout including the navbar and router outlet.
+It also handles search functionality by communicating with the SearchService.</p>
+
+    </p>
 
 
 
@@ -234,12 +244,14 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/app.component.ts:14</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/app.component.ts:24</a></div>
                             </td>
                         </tr>
 
                 <tr>
                     <td class="col-md-4">
+                            <div class="io-description"><p>Creates an instance of AppComponent.</p>
+</div>
                             <div>
                                     <b>Parameters :</b>
                                     <table class="params">
@@ -248,6 +260,7 @@
                                                 <td>Name</td>
                                                     <td>Type</td>
                                                 <td>Optional</td>
+                                                    <td>Description</td>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -262,6 +275,12 @@
                                                             No
                                                     </td>
                                                     
+                                                        <td>
+                                                                <ul>
+<li>Service for managing search functionality</li>
+</ul>
+
+                                                        </td>
                                                 </tr>
                                         </tbody>
                                     </table>
@@ -301,14 +320,17 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="18"
-                                    class="link-to-prism">src/app/app.component.ts:18</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="39"
+                                    class="link-to-prism">src/app/app.component.ts:39</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Handles search events from child components.
+Forwards the search term to the SearchService.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -319,6 +341,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -333,6 +356,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>The search term entered by the user</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -378,10 +407,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/app.component.ts:14</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/app/app.component.ts:24</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The title of the application.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -396,6 +431,13 @@ import { RouterOutlet } from &#x27;@angular/router&#x27;;
 import { NavbarComponent } from &quot;./navbar/navbar.component&quot;;
 import { SearchService } from &#x27;./services/search.service&#x27;;
 
+/**
+ * Root component of the Pokedex application.
+ * 
+ * This component serves as the entry point for the application and
+ * manages the top-level layout including the navbar and router outlet.
+ * It also handles search functionality by communicating with the SearchService.
+ */
 @Component({
   selector: &#x27;app-root&#x27;,
   standalone: true,
@@ -404,10 +446,24 @@ import { SearchService } from &#x27;./services/search.service&#x27;;
   styleUrl: &#x27;./app.component.sass&#x27;
 })
 export class AppComponent {
+  /**
+   * The title of the application.
+   */
   title &#x3D; &#x27;Pokedex-Angular&#x27;;
   
+  /**
+   * Creates an instance of AppComponent.
+   * 
+   * @param searchService - Service for managing search functionality
+   */
   constructor(private searchService: SearchService) {}
 
+  /**
+   * Handles search events from child components.
+   * Forwards the search term to the SearchService.
+   * 
+   * @param term - The search term entered by the user
+   */
   handleSearch(term: string): void {
     this.searchService.updateSearchTerm(term);
   }
